; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c__getch.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c__getch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.termios = type { i32 }

@STDIN_FILENO = common dso_local global i32 0, align 4
@ICANON = common dso_local global i32 0, align 4
@ECHO = common dso_local global i32 0, align 4
@TCSANOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @_getch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_getch() #0 {
  %1 = alloca %struct.termios, align 4
  %2 = alloca %struct.termios, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @STDIN_FILENO, align 4
  %5 = call i32 @tcgetattr(i32 %4, %struct.termios* %1)
  %6 = bitcast %struct.termios* %2 to i8*
  %7 = bitcast %struct.termios* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 %7, i64 4, i1 false)
  %8 = load i32, i32* @ICANON, align 4
  %9 = load i32, i32* @ECHO, align 4
  %10 = or i32 %8, %9
  %11 = xor i32 %10, -1
  %12 = getelementptr inbounds %struct.termios, %struct.termios* %2, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = and i32 %13, %11
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* @STDIN_FILENO, align 4
  %16 = load i32, i32* @TCSANOW, align 4
  %17 = call i32 @tcsetattr(i32 %15, i32 %16, %struct.termios* %2)
  %18 = call i32 (...) @getchar()
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* @STDIN_FILENO, align 4
  %20 = load i32, i32* @TCSANOW, align 4
  %21 = call i32 @tcsetattr(i32 %19, i32 %20, %struct.termios* %1)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @tcgetattr(i32, %struct.termios*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @tcsetattr(i32, i32, %struct.termios*) #1

declare dso_local i32 @getchar(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
